# ortholink-backend

./: .dockerignore  .gitignore  1_MAIN_PRD.txt  Dockerfile  README.md  helton_ukraine_753.csv  omni_stress_test.py  pyproject.toml  smoke_test_redis.py  stress_test_agents.py  test_supabase_live.py  unified_field_results.txt
app/: main.py
app/adapters/: __init__.py  anvisa_adapter.py  artg_adapter.py  base_adapter.py  eudamed_adapter.py  gmdn_adapter.py  (+4 more)
data/: crewai_memory.db
migrations/: 001_raa_tables.sql  002_audit_log_table.sql
scripts/: INGEST_STEPS.md  deactivate_cfs_seeds.py  health_check.sh  ingest_all_countries.py  ingest_brazil_master.py  ingest_cdsco_samd.py  ingest_country.py  ingest_india.py  ingest_india_imdrf.py  ingest_latest_batch.py  ingest_march_2026.py  ingest_mdcg.py  ingest_new_official.py  ingest_openreg_all.py  ingest_priority_accuracy_docs.py  ingest_priority_v2.py  ingest_ukraine.py  ingest_usa.py  ingest_wave3.py  ingest_wave4.py  ingest_wave5.py  ingest_wave6.py  ingest_wave7_gold.py  ingest_weekly_refresh.py  make_dev_token.py  patch_revoked_metadata.py  provision_customer.py  run_ingest_with_env.sh  verify_brain.py  verify_d1.sh
tests/: conftest.py  test_acceptance_ukraine.py  test_alert_tools.py  test_alerts_route.py  test_anti_hallucination.py  test_auth.py  test_cfs_required.py  test_cfs_seeded_after_ingestion.py  test_chunker.py  test_country_isolation.py  test_cra_streaming.py  test_dashboard.py  test_dva_pipeline.py  test_health.py  test_live_feeds_integration.py  test_monitored_docs.py  test_new_agents.py  test_new_infrastructure.py  test_prd_assertions.py  test_raa_agent.py  test_rbac.py  test_refusal.py  test_roa_checklist.py  test_scraper_validator.py  test_similarity.py  test_strategy_scoring.py  test_translator.py
(+113 files in other folders)
