[tool.poetry]
name = "ortholink-backend"
version = "1.0.0"
description = "OrthoLink Regulatory Intelligence Platform - Backend API"
authors = ["OrthoLink Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.7.0"
openai = "^1.60.0"
faiss-cpu = "^1.9.0"
numpy = "^2.0.0"
supabase = "^2.11.0"
PyJWT = "^2.10.0"
crewai = {extras = ["tools"], version = ">=0.102.0"}
beautifulsoup4 = "^4.12.0"
selenium = "^4.27.0"
requests = "^2.32.0"
python-multipart = "^0.0.20"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.0", optional = true}
posthog = {version = "^3.7.0", optional = true}
resend = {version = "^2.0.0", optional = true}
weasyprint = "^62.0"
apscheduler = "^3.10.0"
pymupdf = "^1.24.0"
openpyxl = "^3.1.0"
redis = "^5.0.0"

[tool.poetry.extras]
monitoring = ["sentry-sdk", "posthog"]
email = ["resend"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
httpx = ">=0.23.0"
black = "^24.10.0"
isort = "^5.13.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require live server / real API (deselect with '-m \"not integration\"')",
]
